fix: JWT algorithm mismatch, Redis KEYS→SCAN, TODOs, deprecation warnings
- JwtAuthenticationFilter: use JwtTokenProvider (JJWT) instead of Spring's
  JwtDecoder (Nimbus) to fix HS256 sign / RS256 decode mismatch
- Remove spring-boot-starter-oauth2-resource-server and its yml config
- Redis: replace blocking KEYS with non-blocking SCAN in CacheService
  (keys, deleteByPattern, clearAll) and TrendingEngine.getRecentHashtags
- FeedRankingEngine: implement hasUserSeenPost, hasUserHiddenPost,
  isCloseFriend via Redis Set checks
- ContentScorer: implement getOriginalityScore with content heuristics
- UpdateUserStats: implement basic post count caching
- Fix deprecation: URL(String) -> URI.create().toURL(), add stats
  suppress warning for Caffeine
- Improve CacheBatchJob.warmupCache with actionable TODO